@@ -15,6 +15,8 @@ clipping (moving the position to the bottom of the stack) has been corrected.
 keyboard-independent mapping for foreign and non-QWERTY keyboard layouts, but
 was being applied inconsistently, leading to some issues with correct response
 to keydown events when the bezel was displayed.
+- Per a user request, we've restored the option to use the "white scissors"
+emoji as the status bar icon.
 
 ## [0.80] - 2022-04-24
 ### Rewritten
